<resources>
    <string name="app_name">Xhy_guke</string>

    <!-- 主要的四个模块fragment名称  我的主页和我单独设置-->
    <string name="fragment_v_v_talk">V言V语</string>
    <string name="fragment_dynamic">动态</string>
    <string name="fragment_suggest">推荐</string>
    <string name="fragment_me">我</string>
    <string name="home_title">我的主页</string>

    <!-- 常用语 -->
    <string name="loading">努力加载中...</string>
    <string name="no_data_tips">还木有数据哟...</string>
    <string name="error_happen_back_to_home">发生未知异常，返回首页</string>
    <string name="internet_error">网络发生点错误，工程师正在努力哦...</string>
    <string name="decode_error">数据解析错误...</string>
    <string name="cancel">取消</string>
    <string name="send">发送</string>
    <string name="share_success">分享成功</string>
    <string name="share_fail">分享失败</string>
    <string name="share_cancel">分享取消</string>
    <string name="fail_reason">失败原因:%1$s</string>
    <string name="get_data_fail">获取数据失败</string>
    <string name="double_click_to_exit">再按一次退出程序</string>

    <!-- V言V语 列表页 -->
    <string name="vvtalk_read_count">%1$s人查看</string>

    <!-- V言V语 详情页 -->
    <string name="vvtalk_detail_comment_hint">写评论...</string>
    <string name="vvtalk_detail_title">详情</string>
    <string name="vvtalk_detail_laud_count">共%1$s个赞</string>
    <string name="vvtalk_empty_tips">快来发表评论，抢占沙发！</string>
    <string name="vvtalk_collect_add">收藏成功</string>
    <string name="vvtalk_collect_cancel">取消收藏</string>

    <!-- 动态 -->
    <string name="dynamic_empty_tips">暂无动态，快发发一波！</string>

    <!-- 评论 -->
    <string name="send_comment">发评论</string>
    <string name="comment_hint">写评论...</string>
    <string name="send_comment_fail">发送评论失败</string>
    <string name="comment_empty">评论为空哦</string>
    <string name="comment_success">评论成功</string>

    <!-- 文献详情页 -->
    <string name="attach_download">文献下载</string>
    <string name="attach_intro">文献简介</string>
    <string name="attach_click_download">点击下载</string>
    <string name="down_look_more">——向下滑动，查看评论和点赞——</string>

    <!-- 登录页面 -->
    <string name="login_mobile_hint">请输入手机号码</string>
    <string name="login_pwd_hint">请输入密码</string>
    <string name="login_login">登录</string>
    <string name="login_regist_account">— 注册新账号 —</string>
    <string name="login_forget_pwd">忘记密码？</string>
    <string name="login_user_first">先用用看</string>
    <string name="login_version">版本号：%1$s</string>
    <string name="login_enter_code">请输入验证码</string>
    <string name="login_set_pwd">请设置新密码</string>
    <string name="login_get_code">获取</string>
    <string name="login_submit_login">提交并登录</string>

    <!-- 我 -->
    <string name="me_my_publish">我的发布</string>
    <string name="me_my_publish_post">我发布的帖子</string>
    <string name="me_my_operation">我的操作</string>
    <string name="me_download">下载</string>
    <string name="me_collection">收藏</string>
    <string name="me_follow_count">关注%1$s</string>
    <string name="me_fans_count">粉丝%1$s</string>
    <string name="me_all_visit_count">总访问量(%1$s)</string>
    <string name="me_all_praise_count">总点赞数(%1$s)</string>
    <string name="me_all_comment_count">总评论数(%1$s)</string>

    <!-- 消息站 -->
    <string name="msg_title">消息站</string>
    <string name="msg_user_msg">用户消息</string>
    <string name="msg_system_msg">系统消息</string>
    <string name="msg_broadcast_msg">广播消息</string>


    <!-- 推荐 -->
    <string name="suggest_specail">特别推荐</string>
    <string name="suggest_his_home_page">TA的主页</string>
    <string name="suggest_add_attention"> + 关注</string>
    <string name="suggest_hot_head">热门主任</string>
    <string name="suggest_hot_colleague">热门同仁</string>
    <string name="suggest_attention_progress">关注度 %1$s</string>
    <string name="suggest_read_progress">阅读数 %1$s</string>
    <string name="suggest_praise_progress">点赞数 %1$s</string>
    <string name="suggest_focus_fail">关注失败：%1$s</string>

    <!-- 发布 -->
    <string name="post_publish">发布</string>
    <string name="post_tab_academics">学术</string>
    <string name="post_tab_vv">V说</string>
    <string name="post_post_vv_talk">发布V言V语</string>
    <string name="post_post_by_nickname">昵称发布</string>
    <string name="post_academics_title">学术发布&#038;资源共享</string>
    <string name="post_academics_content">如需发布学术资源请登录管理后台进行编辑发布哦，\n如忘记密码请登录注册号，点击忘记密码可邮箱获取密码，即可发布到您的最新学术资源</string>
    <string name="post_edit_hint">输入内容</string>
    <string name="post_photo_more_than_max">仅可以选择9张图片哦</string>
    <string name="post_content_empty">内容为空哦</string>
    <string name="post_success">发布成功</string>
    <string name="post_fail">发送失败</string>
    <string name="post_write_something">文字和图片不能都不填写哦</string>

    <!-- 我发布的V言V语 -->
    <string name="mypublish_read_count">阅读 %1$s</string>
    <string name="mypublish_comment_count">评论 %1$s</string>
    <string name="mypublish_praise_count">点赞 %1$s</string>
    <string name="mypublish_no_data">您还未发布任何的V言V语哦</string>
    <string name="mypublish_time">%1$s发布</string>
    <string name="mypublish_no_more_data">没有更多的发布数据了</string>

    <!-- TA的主页 -->
    <string name="homepage_title">TA的主页</string>

    <!-- 分享地址 -->
    <string name="share_video_content">视频分享</string>
    <string name="share_type_video_post"> http://incongress.cn/XhyApiV2.do?getDataByIdH5&#038;dataId=%1$s&#038;isShare=1</string>
    <string name="share_type_attach"> http://incongress.cn/xhy/pdfHtml/pdfInHtml.html?pdfUrl=%1$s&#038;title=%2$s&#038;dataId=%3$s&#038;isShare=1</string>

    <!-- 我的收藏 -->
    <string name="collection_title">我的收藏</string>

    <!-- 登录 -->
    <string name="login_success">登录成功</string>
    <string name="login_fail">登录失败[%1$s]</string>
    <string name="login_name_pwd_empty">手机号和密码不能为空哦</string>
    <string name="login_mobile_format_error">手机号格式不对哦</string>

    <!-- 设置 -->
    <string name="setting_title">设置</string>
    <string name="setting_feed_back">意见反馈</string>
    <string name="setting_suggest_friend">推荐给好友</string>
    <string name="setting_about_us">关于我们</string>
    <string name="setting_exit">注销</string>
    <string name="setting_feed_back_url">http://weixin.incongress.cn/xhy/xhyHtml5/html/feedback.html?userId=%1$s&#038;project=%2$s</string>
    <string name="setting_about_us_url">http://www.incongress.cn</string>
    <string name="setting_suggestion_app_to_friend_title">推荐此应用给好友</string>
    <string name="setting_wechat_friend">微信好友</string>
    <string name="setting_wechat_moment">微信朋友圈</string>
    <string name="setting_share_app_title">老年医学APP</string>
    <string name="setting_share_app_content">专为N多老年同道精心打造。</string>
    <string name="setting_share_app_download_url">http://app.incongress.cn/lnyx/</string>

    <!-- 提示框 -->
    <string name="dialog_title">温馨提示</string>
    <string name="dialog_ok">确定</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_exist">确定要退出软件吗？</string>

    <!-- 个人信息页面· -->
    <string name="personal_center">个人信息</string>
    <string name="info_user_icon">头像</string>
    <string name="info_name">姓名</string>
    <string name="info_nick_name">昵称</string>
    <string name="info_sexual">性别</string>
    <string name="info_email">邮箱</string>
    <string name="info_resource">我的资源</string>
    <string name="info_location">地区</string>
    <string name="info_keshi">科室</string>
    <string name="info_zhicheng">职称</string>
    <string name="info_education_school">毕业院校</string>
    <string name="info_in_school_time">入学年份</string>
    <string name="info_compete_to_comment">资料完善即可参与评论互动</string>
    <string name="get_photo_fail">获取照片失败</string>
    <string name="choose_area_first">请先选择您所处的区域哦</string>
    <string name="info_hospital">医院</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="info_mobilephone">手机</string>
    <string name="uploading_head_icon">正在上传头像</string>
    <string name="personal_info_cancel">取消</string>
    <string name="personal_info_save">保存</string>
    <string name="email_wrong_format">您填写的邮箱格式有问题，请填写正确的邮箱</string>
    <string name="name_can_not_empty">姓名不能为空</string>
    <string name="email_can_not_empty">邮箱不能为空</string>
    <string name="keshi_can_not_empty">科室不能为空</string>
    <string name="zhcheng_can_not_empty">职称不能为空</string>
    <string name="nickname_cann_not_empty">昵称不能为空</string>
    <string name="info_no_setting">未设置</string>
    <string name="info_blank"> </string>

</resources>
