<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_user_first"
        android:text="@string/login_user_first"
        android:textColor="#818181"
        android:layout_margin="@dimen/layout_margin"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/iv_logo"
        android:src="@mipmap/ic_launcher"
        android:layout_below="@id/tv_user_first"
        android:layout_margin="@dimen/layout_margin"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="180" />
    <EditText
        android:id="@+id/et_mobile"
        android:layout_width="match_parent"
        android:layout_below="@id/iv_logo"
        android:layout_height="46dp"
        android:background="@drawable/bg_login"
        android:padding="@dimen/layout_padding"
        android:textSize="@dimen/text_size_media"
        android:gravity="center"
        android:layout_margin="@dimen/layout_margin"
        android:hint="@string/login_mobile_hint"/>

    <EditText
        android:id="@+id/et_pwd"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:background="@drawable/bg_login"
        android:layout_below="@id/et_mobile"
        android:padding="@dimen/layout_padding"
        android:textSize="@dimen/text_size_media"
        android:gravity="center"
        android:layout_margin="@dimen/layout_margin"
        android:hint="@string/login_pwd_hint"/>

    <Button
        android:id="@+id/bt_login"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/layout_margin"
        android:background="@drawable/bg_login_bt"
        android:layout_below="@id/et_pwd"
        android:text="@string/login_login"
        android:textSize="@dimen/text_size_large"
        android:layout_height="46dp" />


    <TextView
        android:layout_width="wrap_content"
        android:textSize="@dimen/text_size_media"
        android:layout_below="@id/bt_login"
        android:layout_centerHorizontal="true"
        android:textColor="#0697d6"
        android:text="@string/login_regist_account"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="@dimen/layout_padding"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/login_forget_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>