<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="6dp">
            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_title_with_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="三分钟前发布：针对长期接收联合治疗，贷款大发打死法师打发斯蒂芬大师傅阿斯蒂芬阿斯顿发斯蒂芬啊阿斯蒂芬阿斯蒂芬纠纷"
                android:textSize="@dimen/text_size_media" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/tv_publish_time"
                    android:layout_height="wrap_content"
                    android:text="@string/mypublish_time"/>

                <TextView
                    android:id="@+id/tv_read_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mypublish_read_count"
                    android:textSize="@dimen/text_size_small" />

                <TextView
                    android:id="@+id/tv_comment_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/layout_margin"
                    android:text="@string/mypublish_comment_count"
                    android:textSize="@dimen/text_size_small" />

                <TextView
                    android:id="@+id/tv_praise_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/layout_margin"
                    android:text="@string/mypublish_praise_count"
                    android:textSize="@dimen/text_size_small" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>