<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_top_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/item_background_professor_default"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <cn.incongress.xhy_guke.uis.CircleImageView
            android:layout_width="58dp"
            android:layout_height="58dp"
            android:layout_marginTop="@dimen/layout_margin"
            android:src="@mipmap/item_vvtalk_professor_head_default" />

        <TextView
            style="@style/wrap_wrap"
            android:layout_marginTop="@dimen/layout_margin"
            android:text="沈宏易"
            android:textColor="@color/theme_blue" />

        <LinearLayout
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="关注256"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_top_info"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tv_operation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_top_info"
            android:padding="6dp"
            android:text="@string/me_my_operation"
            android:textSize="@dimen/text_size_small" />

        <LinearLayout
            style="@style/fill_wrap"
            android:layout_below="@id/tv_operation"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/layout_padding">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:text="@string/me_download"
                android:textSize="@dimen/text_size_media" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="right"
                android:text="6"
                android:textSize="@dimen/text_size_small" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@mipmap/me_next" />
        </LinearLayout>

        <View style="@style/h_line" />

        <LinearLayout
            style="@style/fill_wrap"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/layout_padding">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:text="@string/me_collection"
                android:textSize="@dimen/text_size_media" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="right"
                android:text="8"
                android:textSize="@dimen/text_size_small" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@mipmap/me_next" />
        </LinearLayout>

    </LinearLayout>

    <ImageView
        style="@style/wrap_wrap"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/layout_margin"
        android:src="@mipmap/me_apply_certify" />

</RelativeLayout>